samples/_failures_safe/1761193844_8fe335_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fd9ca79.c: In function ‘main’:
./samples/SAFE/__tmp_4fd9ca79.c:147:12: error: missing terminating " character
  147 |     printf("
      |            ^
./samples/SAFE/__tmp_4fd9ca79.c:147:5: error: expected expression at end of input
  147 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_4fd9ca79.c:147:5: error: expected declaration or statement at end of input
